Add APIs to interact with deployment status
